# Infinite-Open-World-Engine

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
scripts/: setup_db.py
src/: config.py  dependencies.py  main.py
src/api/: auth.py  models.py  routes.py  websocket.py
src/brain/: npc_brain.py  parser.py  prompts.py  quest_brain.py  router.py  story.py  world_brain.py
src/db/: postgres.py  redis_client.py
src/memory/: embedder.py  event_log.py  npc_memory.py  player_profile.py  retrieval.py  vector_store.py
src/npc/: generator.py  personality.py  schedule.py
src/quest/: consequences.py  generator.py  tracker.py  types.py
src/render/: map.py  narrative.py  ui_data.py
src/world/: clock.py  economy.py  events.py  factions.py  generator.py  state.py  weather.py
tests/: test_api.py  test_brain.py
